--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,10 @@
 @import './base.css';
 @import "bootstrap";
 
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    text-align: center;
+    font-family: Calibri;
+}
