TopMenu - put container that top part is in the middle

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,3 +14,17 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+@media (min-width: 1024px) {
+    header {
+        display: flex;
+        place-items: center;
+        padding-right: calc(var(--section-gap) / 2);
+    }
+
+    header {
+        display: flex;
+        place-items: flex-start;
+        flex-wrap: wrap;
+    }
+}
